# StelLA_Project

./: .copier-answers.yml  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .pre-commit-config.yaml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  benchmark.py  main.py  mkdocs.yml  models.py  notebook.ipynb  pyproject.toml  report.fdb_latexmk  report.fls
.github/workflows/: docs.yml  test.yml
deliverables/: report.tex
docs/: index.md  reference.md
memory/: user_alan.md
notebooks/: notebook.ipynb
scripts/: ablation.py  bench_efficiency.py  bench_expressivity.py  benchmark.py  lora_memory_analysis.py  main.py  models.py  orthogonality_check.py  plot_memory_mosaic_widget.py  plot_results.py
src/stellatscale/: __init__.py  _nanogpt_backbone.py  memory_experiment.py  models.py
tests/: __init__.py  test_import.py  test_memory_experiment.py  test_models.py
