[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.0",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.3",
    "peft==0.14.0",
    "stella",
    "torch>=2.10.0",
    "transformers==4.48.0",
]

[tool.uv.sources]
stella = { git = "https://github.com/SonyResearch/stella" }
